# silicon-architect-env

./: .gitignore  Dockerfile  README.md  environment.py  inference.py  openenv.yaml  pyproject.toml  tasks.py
server/: __init__.py  app.py
